--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "install": "^0.11.0",
     "native-base": "^2.4.5",
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-looped-carousel": "^0.1.13",
+    "react-native-ratings": "^5.3.0",
+    "react-native-svg-image": "^2.0.1",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.0.4"
   },
