--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "react-native-ratings": "^5.3.0",
     "react-native-svg-image": "^2.0.1",
     "react-native-vector-icons": "^4.6.0",
-    "react-navigation": "^2.0.4"
+    "react-navigation": "^2.0.4",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.0.1",
     "babel-preset-react-native": "4.0.0",
     "jest": "23.0.1",
-    "react-test-renderer": "16.3.1"
+    "react-test-renderer": "16.3.1",
+    "reactotron-react-native": "^1.14.0",
+    "reactotron-redux": "^1.13.0"
   },
   "jest": {
     "preset": "react-native"
