--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "native-base": "^2.4.5",
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-datepicker": "^1.7.2",
     "react-native-looped-carousel": "^0.1.13",
     "react-native-ratings": "^5.3.0",
     "react-native-svg-image": "^2.0.1",
