--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-navigation": "^2.0.4",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "validator": "^10.4.0"
   },
   "devDependencies": {
     "babel-jest": "23.0.1",
