--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.55.4",
     "react-native-banner-carousel": "^1.0.3",
     "react-native-datepicker": "^1.7.2",
+    "react-native-image-zoom-viewer": "^2.2.7",
     "react-native-looped-carousel": "^0.1.13",
     "react-native-ratings": "^5.3.0",
     "react-native-svg-image": "^2.0.1",
