--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "class-autobind": "^0.1.4",
     "install": "^0.11.0",
     "native-base": "^2.4.5",
     "react": "16.3.1",
@@ -15,7 +16,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-image-zoom-viewer": "^2.2.7",
     "react-native-looped-carousel": "^0.1.13",
-    "react-native-ratings": "^5.3.0",
+    "react-native-stars-rating": "^0.1.7",
     "react-native-svg-image": "^2.0.1",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.0.4",
