--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.55.4",
     "react-native-banner-carousel": "^1.0.3",
     "react-native-datepicker": "^1.7.2",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-image-picker": "^0.26.10",
     "react-native-image-zoom-viewer": "^2.2.7",
     "react-native-looped-carousel": "^0.1.13",
