--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-banner-carousel": "^1.0.3",
     "react-native-datepicker": "^1.7.2",
     "react-native-fetch-blob": "^0.10.8",
+    "react-native-image-header-scroll-view": "^0.8.2",
     "react-native-image-picker": "^0.26.10",
     "react-native-image-zoom-viewer": "^2.2.7",
     "react-native-looped-carousel": "^0.1.13",
