--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "class-autobind": "^0.1.4",
     "install": "^0.11.0",
     "native-base": "^2.4.5",
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-aws3": "0.0.8",
     "react-native-banner-carousel": "^1.0.3",
     "react-native-datepicker": "^1.7.2",
     "react-native-fetch-blob": "^0.10.8",
