--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "native-base": "^2.4.5",
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-animated-header-scroll-view": "0.0.7",
     "react-native-aws3": "0.0.8",
     "react-native-banner-carousel": "^1.0.3",
     "react-native-datepicker": "^1.7.2",
     "react-native-fetch-blob": "^0.10.8",
-    "react-native-image-header-scroll-view": "^0.8.2",
     "react-native-image-picker": "^0.26.10",
     "react-native-image-zoom-viewer": "^2.2.7",
     "react-native-looped-carousel": "^0.1.13",
