--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "install": "^0.11.0",
     "native-base": "^2.4.5",
     "react": "16.3.1",
+    "react-content-loader": "^3.1.2",
     "react-native": "0.55.4",
     "react-native-aws3": "0.0.8",
     "react-native-banner-carousel": "^1.0.3",
