--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "autosuggest": "0.0.2",
     "axios": "^0.18.0",
     "class-autobind": "^0.1.4",
     "install": "^0.11.0",
