--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-autosuggest": "^1.0.1",
     "react-native-aws3": "0.0.8",
     "react-native-banner-carousel": "^1.0.3",
+    "react-native-complete-flatlist": "^1.1.16",
     "react-native-datepicker": "^1.7.2",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-image-gallery": "^2.1.5",
