--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "react-native-image-gallery": "^2.1.5",
     "react-native-image-picker": "^0.26.10",
     "react-native-looped-carousel": "^0.1.13",
+    "react-native-offline": "^3.11.0",
     "react-native-star-rating": "^1.0.9",
     "react-native-svg-image": "^2.0.1",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.0.4",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.3.0",
     "validator": "^10.4.0"
   },
