--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.55.4",
     "react-native-aws3": "0.0.8",
     "react-native-banner-carousel": "^1.0.3",
+    "react-native-countdown-component": "^1.7.1",
     "react-native-datepicker": "^1.7.2",
     "react-native-image-gallery": "^2.1.5",
     "react-native-image-picker": "^0.26.10",
