--- a/ios/lunadorii/Info.plist
+++ b/ios/lunadorii/Info.plist
@@ -42,6 +42,7 @@
 	<string></string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+    <key>NSAllowsArbitraryLoads</key><true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>localhost</key>
