--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "class-autobind": "^0.1.4",
     "install": "^0.11.0",
     "native-base": "^2.4.5",
-    "react": "16.3.1",
-    "react-native": "0.55.4",
+    "react": "^16.4.1",
+    "react-native": "^0.56.0",
     "react-native-aws3": "0.0.8",
     "react-native-banner-carousel": "^1.0.3",
     "react-native-countdown-component": "^1.7.1",
     "react-native-datepicker": "^1.7.2",
     "react-native-image-gallery": "^2.1.5",
-    "react-native-image-picker": "^0.26.10",
+    "react-native-image-picker": "git+https://github.com/abartolo/react-native-image-picker#UpgradeToRNv56",
     "react-native-rescomponent": "^1.0.4",
     "react-native-star-rating": "^1.0.9",
     "react-native-svg-image": "^2.0.1",
