--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -148,11 +148,13 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-fbsdk')
     compile project(':react-native-image-picker')
     compile project(':react-native-vector-icons')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     compile "com.facebook.react:react-native:+"  // From node_modules
+    compile 'com.facebook.android:facebook-login:[4,5)'
 }
 
 // Run this once to be able to run the application with BUCK
