--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "babel-jest": "23.0.1",
-    "babel-preset-react-native": "5.0.0",
+    "babel-preset-react-native": "^5.0.0",
     "jest": "23.0.1",
     "react-test-renderer": "16.3.1",
     "reactotron-react-native": "^1.14.0",
