--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-countdown-component": "^1.7.1",
     "react-native-datepicker": "^1.7.2",
     "react-native-fbsdk": "^0.7.0",
+    "react-native-i18n": "^2.0.15",
     "react-native-image-gallery": "^2.1.5",
     "react-native-image-picker": "git+https://github.com/abartolo/react-native-image-picker#UpgradeToRNv56",
     "react-native-rescomponent": "^1.0.4",
