--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -148,6 +148,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-google-signin')
     compile project(':react-native-i18n')
     compile project(':react-native-fbsdk')
     compile project(':react-native-image-picker')
@@ -156,6 +157,11 @@ dependencies {
     compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile 'com.facebook.android:facebook-login:[4,5)'
+    compile 'com.google.firebase:firebase-core:16.0.1'
+    compile(project(":react-native-google-signin")){
+        exclude group: "com.google.android.gms" // very important
+    }
+    compile 'com.google.android.gms:play-services-auth:15.0.0'
 }
 
 // Run this once to be able to run the application with BUCK
@@ -164,3 +170,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+apply plugin: 'com.google.gms.google-services'
