fixing ios login with google

--- a/ios/lunadorii/Info.plist
+++ b/ios/lunadorii/Info.plist
@@ -25,9 +25,33 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string></string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>fb301124970649785</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string></string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.87885804671-1o0q5ckh1m05klqem64s5t4cira9dgm8</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.lunadorii</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.lunadorii</string>
 			</array>
 		</dict>
 	</array>
