--- a/ios/lunadorii/Info.plist
+++ b/ios/lunadorii/Info.plist
@@ -127,7 +127,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera want permission for taking photo profile</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>used save image to gallery</string>
 </dict>
 </plist>
